@@ -6,7 +6,7 @@
 \usage{
 \method{plot}{forecast}(x, include, plot.conf=TRUE, shaded=TRUE,
     shadebars=(length(x$mean)<5), shadecols=NULL, col=1, fcol=4,
-    pi.col=1, pi.lty=2, ylim=NULL, main=NULL, ylab="", xlab="", type="l",
+    pi.col=1, pi.lty=2, ylim=NULL, main=NULL, xlab="", ylab="", type="l",
     flty=1, flwd=2, ...)
 
 \method{plot}{splineforecast}(x, fitcol=2, type="o", pch=19, ...)
@@ -25,10 +25,10 @@
 \item{flwd}{Line width for the forecast line.}
 \item{pi.col}{If \code{shade=FALSE} and \code{plot.conf=TRUE}, the prediction intervals are plotted in this colour.}
 \item{pi.lty}{If \code{shade=FALSE} and \code{plot.conf=TRUE}, the prediction intervals are plotted using this line type.}
-\item{ylim}{Limits on y-axis}
-\item{main}{Main title}
-\item{ylab}{Y-axis label}
-\item{xlab}{X-axis label}
+\item{ylim}{Limits on y-axis.}
+\item{main}{Main title.}
+\item{xlab}{X-axis label.}
+\item{ylab}{Y-axis label.}
 \item{fitcol}{Line colour for fitted values.}
 \item{type}{1-character string giving the type of plot desired. As for \code{\link[graphics]{plot.default}}.}
 \item{pch}{Plotting character (if \code{type=="p"} or \code{type=="o"}).}
