@@ -4,6 +4,8 @@ Version 5.10 (?? 2015)
   * Fixed arima.errors() to handle Box-Cox transformed models.
   * Modified auto.arima() to be stricter on near-unit-roots.
   * Fixed typo in accuracy help file regarding RMSE
+  * Improved handling of constant series in Arima() and forecast.Arima().
+  * Added plot.Arima() and plot.ar() functions.
 
 Version 5.9 (26 February 2015)
   * Improved documentation of accuracy() function.
